--- a/src/app/login-page/create-account-page/create-account-page.component.html
+++ b/src/app/login-page/create-account-page/create-account-page.component.html
@@ -1,1 +1,44 @@
-<p>create-account-page works!</p>
+<form class="card" [formGroup]="form" (ngSubmit)="submit()">
+  <h1>Enter the registration data</h1>
+
+  <div class="alert-danger" *ngIf="register.error$ | async as error">{{error}}</div>
+
+  <div
+    [ngClass]="{invalid: form.get('email')?.touched && form.get('email').invalid}"
+    class="form-control">
+    <label for="email">Email</label>
+    <input id="email" type="email" formControlName="email">
+    <div *ngIf="form.get('email')?.invalid && form.get('email')?.touched" class="validation">
+      <small *ngIf="form.get('email')?.errors.required">Please, enter email</small>
+      <small *ngIf="form.get('email')?.errors.email">Please, enter correct email</small>
+    </div>
+  </div>
+
+  <div
+    [ngClass]="{invalid: form.get('password')?.touched && form.get('password')?.invalid}"
+    class="form-control" >
+    <label for="password">Password</label>
+    <input id="password" type="password" formControlName="password">
+    <div *ngIf="form.get('password')?.touched && form.get('password')?.invalid" class="validation">
+      <small *ngIf="form.get('password')?.errors.required">Please, enter password</small>
+      <small *ngIf="form.get('password')?.errors.minlength">Minimal password length {{form.get('password')?.errors.minlength.requiredLength}} symbols</small>
+    </div>
+  </div>
+
+  <div
+    [ngClass]="{invalid: form.get('repeatPassword')?.touched && form.get('repeatPassword')?.invalid}"
+    class="form-control">
+    <label for="repeatPassword">Repeat password</label>
+    <input id="repeatPassword" type="password" formControlName="repeatPassword">
+    <div *ngIf="form.get('repeatPassword')?.touched && form.get('repeatPassword')?.invalid" class="validation">
+      <small *ngIf="form.get('repeatPassword')?.errors.required">Please, repeat password</small>
+      <small *ngIf="form.get('repeatPassword')?.errors.matchValidator">Passwords doesn`t match</small>
+    </div>
+  </div>
+
+  <div class="btn_block">
+    <button class="btn" routerLink="/">Back</button>
+    <button class="btn" type="submit" [disabled]="form.invalid || submitted" >Sign up</button>
+  </div>
+
+</form>
