--- a/src/app/shared/main-layout/main-layout.component.html
+++ b/src/app/shared/main-layout/main-layout.component.html
@@ -3,9 +3,13 @@
     <a [routerLink]="['/']">Form builder App</a>
   </h1>
   <ul>
-    <li><a class="" (click)="login()">Login</a></li>
+    <li routerLinkActive="active"><a [routerLink]="['/formbuilder']"> Form builder</a></li>
+    <li><a class="" *ngIf="!(isAuthenticated$ | ngrxPush)" [routerLink]="['/auth', 'signup']">Sign up</a></li>
+    <li><a class="" *ngIf="!(isAuthenticated$ | ngrxPush)" [routerLink]="['/auth', 'login']">Login</a></li>
+    <li><a href="#" *ngIf="isAuthenticated$ | ngrxPush" (click)="logout($event)">Logout</a></li>
   </ul>
 </nav>
+
 <div class="container">
   <router-outlet></router-outlet>
 </div>
