--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,7 @@ body {
   padding: 0;
   background-color: whitesmoke;
   font-family: 'Roboto', sans-serif;
+  overflow-x:hidden;
 }
 
 a {
@@ -25,12 +26,6 @@ a {
 
 a:hover {
   opacity: 0.7;
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
 
 .btn {
@@ -54,6 +49,7 @@ a:hover {
   align-items: center;
   padding: 0.7rem 2rem;
   z-index: 1;
+  min-width: 1100px;
   width: 100%;
   opacity: .9;
   margin-bottom: 1px solid var(--dark-color);
