Optimization and tests

--- a/src/app/auth/login-page/login-page.component.html
+++ b/src/app/auth/login-page/login-page.component.html
@@ -1,35 +1,36 @@
-<form class="card" [formGroup]="logInfForm" (ngSubmit)="submit()">
-  <h1>Enter the authorization data</h1>
+<form class="card" [formGroup]="logInForm" (ngSubmit)="submit()">
+  <div id="title"><p>Enter the authorization data</p></div>
 
   <div class="alert-danger" *ngIf="errorMessage$ | ngrxPush as error">{{error}}</div>
 
   <div class="alert-info" *ngIf="message">{{message}}</div>
 
   <div
-    [ngClass]="{invalid: logInfForm.get('email')?.touched && logInfForm.get('email')?.invalid}"
+    [ngClass]="{ invalid: logInForm.get('email')?.touched && logInForm.get('email')?.invalid }"
     class="form-control">
-    <label for="email">Email</label>
-    <input type="email" id="email" formControlName="email">
-    <div *ngIf="logInfForm.get('email')?.touched && logInfForm.get('email')?.invalid" class="validation">
-      <small *ngIf="logInfForm.get('email')?.errors.required">Please, enter email</small>
-      <small *ngIf="logInfForm.get('email')?.errors.email">Please, enter correct email</small>
-    </div>
+    <mat-form-field appearance="fill">
+      <mat-label>Enter your email</mat-label>
+      <input class="text_Input" matInput placeholder="pat@example.com" type="email" formControlName="email" required>
+      <mat-error class="error" *ngIf="logInForm.get('email')?.touched && logInForm.get('email')?.invalid">{{getEmailErrorMessage()}}</mat-error>
+    </mat-form-field>
   </div>
 
   <div
-    [ngClass]="{invalid: logInfForm.get('password')?.touched && logInfForm.get('password')?.invalid}"
+    [ngClass]="{invalid: logInForm.get('password')?.touched && logInForm.get('password')?.invalid}"
     class="form-control">
-    <label for="password">Password</label>
-    <input type="password" id="password" formControlName="password">
-    <div *ngIf="logInfForm.get('password')?.touched && logInfForm.get('password')?.invalid" class="validation">
-      <small *ngIf="logInfForm.get('password')?.errors.required">Please, enter password</small>
-      <small *ngIf="logInfForm.get('password')?.errors.minlength">
-        Minimal password length {{logInfForm.get('password')?.errors.minlength.requiredLength}} symbols</small>
-    </div>
+    <mat-form-field appearance="fill">
+      <mat-label>Enter your password</mat-label>
+      <input class="text_Input" matInput [type]="hide ? 'password' : 'text'" formControlName="password">
+      <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+              [attr.aria-pressed]="hide">
+        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+      </button>
+      <mat-error *ngIf="logInForm.get('password')?.touched && logInForm.get('password')?.invalid">{{getPasswordErrorMessage()}}</mat-error>
+    </mat-form-field>
   </div>
 
   <div class="btn_block">
-    <button type="submit" class="btn" [disabled]="logInfForm.invalid">Log in</button>
+    <button type="submit" class="btn" [disabled]="logInForm.invalid">Log in</button>
     <button class="btn" [routerLink]="['/auth', 'signup']">Sign up</button>
   </div>
 
