--- a/src/app/form-builder/form-builder-component/form-builder.component.html
+++ b/src/app/form-builder/form-builder-component/form-builder.component.html
@@ -43,7 +43,7 @@
           <app-input-form
             class="container"
             [item]="item"></app-input-form>
-          <a (click)="deleteItem(item.id)">
+          <a class="delete_btn" (click)="deleteItem(item.id)">
             <mat-icon>restore_from_trash</mat-icon>
           </a>
         </div>
@@ -53,7 +53,7 @@
           <app-textarea-form
             class="container"
             [item]="item"></app-textarea-form>
-          <a (click)="deleteItem(item.id)">
+          <a class="delete_btn" (click)="deleteItem(item.id)">
             <mat-icon>restore_from_trash</mat-icon>
           </a>
         </div>
@@ -63,7 +63,7 @@
           (click)="selectInputType(selectedForm.Button, item.id)">
           <app-button-form
             [item]="item"></app-button-form>
-          <a (click)="deleteItem(item.id)">
+          <a class="delete_btn" (click)="deleteItem(item.id)">
             <mat-icon>restore_from_trash</mat-icon>
           </a>
         </div>
@@ -72,7 +72,7 @@
           (click)="selectInputType(selectedForm.Checkbox, item.id)"
           *ngIf="item.inputType === 'checkbox'">
           <app-checkbox-form [item]="item"></app-checkbox-form>
-          <a (click)="deleteItem(item.id)">
+          <a class="delete_btn" (click)="deleteItem(item.id)">
             <mat-icon>restore_from_trash</mat-icon>
           </a>
         </div>
@@ -81,7 +81,7 @@
           (click)="selectInputType(selectedForm.Select, item.id)"
           *ngIf="item.inputType === 'select'">
           <app-select-form [item]="item"></app-select-form>
-          <a (click)="deleteItem(item.id)">
+          <a class="delete_btn" (click)="deleteItem(item.id)">
             <mat-icon>restore_from_trash</mat-icon>
           </a>
         </div>
@@ -97,12 +97,12 @@
         [cdkDropListConnectedTo]="[workList]"
         [cdkDropListData]="inputs$ | ngrxPush">
       <li class="form-control-inputs">
-        <button mat-fab extended
-                cdkDrag
-                *ngFor="let input of inputs$ | ngrxPush">
-          <h3>{{input.name}}</h3>
-          <mat-icon>{{input.icon}}</mat-icon>
-        </button>
+          <button
+            cdkDrag
+            *ngFor="let input of inputs$ | ngrxPush">
+            <h3>{{input.name}}</h3>
+            <mat-icon>{{input.icon}}</mat-icon>
+          </button>
       </li>
     </ul>
   </div>
