--- a/src/app/form-builder/options/input-changer/input-changer.component.html
+++ b/src/app/form-builder/options/input-changer/input-changer.component.html
@@ -3,14 +3,14 @@
   <div class="options_form_component">
     <mat-form-field>
       <mat-label>Placeholder text:</mat-label>
-      <input matInput type="text" placeholder="Write placeholder" formControlName="placeholder">
+      <input class="text_Input" matInput type="text" placeholder="Write placeholder" formControlName="placeholder">
     </mat-form-field>
   </div>
 
   <div class="options_form_component">
     <mat-form-field>
       <mat-label>Font size:</mat-label>
-      <input matInput type="number" placeholder="Enter font size between 1 and 40" min="1" max="40" formControlName="fontSize">
+      <input class="text_Input" matInput type="number" placeholder="Enter font size between 1 and 40" min="1" max="40" formControlName="fontSize">
     </mat-form-field>
     <div *ngIf="inputChangerForm.get('fontSize')?.invalid" class="validation">
       <small *ngIf="inputChangerForm.get('fontSize')?.errors.max">Max font size: 40</small>
@@ -20,7 +20,7 @@
 
   <div class="options_form_component">
     <mat-form-field appearance="fill">
-      <div><mat-label>Font weight:</mat-label></div>
+      <mat-label>Font weight:</mat-label>
       <select matNativeControl formControlName="fontWeight">
         <option value="normal">Normal</option>
         <option value="bold">Bold</option>
