--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,5 +1,5 @@
 <div class="greetings">
   <h1>Get Start to build forms!</h1>
-  <div><h2>To get access the signUpForm builder, you must first log in or sign up.</h2></div>
+  <div><h2>To get access, you must first log in or sign up.</h2></div>
 </div>
 
