--- a/src/app/auth/create-account-page/create-account-page.component.html
+++ b/src/app/auth/create-account-page/create-account-page.component.html
@@ -1,39 +1,36 @@
 <form class="card" [formGroup]="signUpForm" (ngSubmit)="submit()">
-  <h1>Enter the registration data</h1>
+  <div id="title"><p>Enter the registration data</p></div>
 
   <div class="alert-danger" *ngIf="errorMessage$ | ngrxPush as error">{{error}}</div>
 
   <div
     [ngClass]="{invalid: signUpForm.get('email')?.touched && signUpForm.get('email').invalid}"
     class="form-control">
-    <label for="email">Email</label>
-    <input id="email" type="email" formControlName="email">
-    <div *ngIf="signUpForm.get('email')?.invalid && signUpForm.get('email')?.touched" class="validation">
-      <small *ngIf="signUpForm.get('email')?.errors.required">Please, enter email</small>
-      <small *ngIf="signUpForm.get('email')?.errors.email">Please, enter correct email</small>
-    </div>
+    <mat-form-field appearance="fill">
+      <mat-label>Enter your email</mat-label>
+      <input class="text_Input" matInput placeholder="pat@example.com" type="email" formControlName="email" required>
+      <mat-error class="error" *ngIf="signUpForm.get('email')?.touched && signUpForm.get('email')?.invalid">{{getEmailErrorMessage()}}</mat-error>
+    </mat-form-field>
   </div>
 
   <div
     [ngClass]="{invalid: signUpForm.get('password')?.touched && signUpForm.get('password')?.invalid}"
     class="form-control" >
-    <label for="password">Password</label>
-    <input id="password" type="password" formControlName="password">
-    <div *ngIf="signUpForm.get('password')?.touched && signUpForm.get('password')?.invalid" class="validation">
-      <small *ngIf="signUpForm.get('password')?.errors.required">Please, enter password</small>
-      <small *ngIf="signUpForm.get('password')?.errors.minlength">Minimal password length {{signUpForm.get('password')?.errors.minlength.requiredLength}} symbols</small>
-    </div>
+    <mat-form-field appearance="fill">
+      <mat-label>Enter your password</mat-label>
+      <input class="text_Input" matInput type="password" formControlName="password">
+      <mat-error *ngIf="signUpForm.get('password')?.touched && signUpForm.get('password')?.invalid">{{getPasswordErrorMessage()}}</mat-error>
+    </mat-form-field>
   </div>
 
   <div
     [ngClass]="{invalid: signUpForm.get('repeatPassword')?.touched && signUpForm.get('repeatPassword')?.invalid}"
     class="form-control">
-    <label for="repeatPassword">Repeat password</label>
-    <input id="repeatPassword" type="password" formControlName="repeatPassword">
-    <div *ngIf="signUpForm.get('repeatPassword')?.touched && signUpForm.get('repeatPassword')?.invalid" class="validation">
-      <small *ngIf="signUpForm.get('repeatPassword')?.errors.required">Please, repeat password</small>
-      <small *ngIf="signUpForm.get('repeatPassword')?.errors.matchValidator">Passwords don`t match</small>
-    </div>
+    <mat-form-field appearance="fill">
+      <mat-label>Repeat password</mat-label>
+      <input class="text_Input" matInput type="password" formControlName="repeatPassword">
+      <mat-error *ngIf="signUpForm.get('repeatPassword')?.touched && signUpForm.get('repeatPassword')?.invalid">{{getRepeatPasswordErrorMessage()}}</mat-error>
+    </mat-form-field>
   </div>
 
   <div class="btn_block">
