--- a/src/app/auth/style/auth.scss
+++ b/src/app/auth/style/auth.scss
@@ -2,12 +2,12 @@ form {
   max-width: 600px;
   margin: 2rem auto;
 }
-input, textarea {
-  display: block;
+input {
   width: 100%;
-  padding: .4rem;
+  padding: .8rem 0 .1rem 0;
+  border: 0;
+  margin-top: .4rem;
   font-size: 1.2rem;
-  border: 1px solid #ccc;
 }
 .btn_block {
   display: flex;
